addition of form

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,10 @@
+<form action="/dinosaurs" method="get">
+    <label for="nameFilter">Filter by Name:</label>
+    <!-- the for in the label and the id in the input need to be the same -->
+    <input type="text" name="nameFilter" id="nameFilter">
+    <button type="'submit">Filter Results</button>
+</form>
+
 <ul>
     <% myDinos.forEach(dino => { %>
         <li> <%= dino.name %> is a <%= dino.type %> </li>
